@@ -11,7 +11,7 @@ import xbmc
 import xbmcaddon
 
 LIB_DIR = xbmc.translatePath(
-    os.path.join(xbmcaddon.Addon(id="plugin.video.tweakers").getAddonInfo('path'), 'resources', 'lib'))
+    os.path.join(xbmcaddon.Addon().getAddonInfo('path'), 'resources', 'lib'))
 sys.path.append(LIB_DIR)
 
 from tweakers_const import ADDON, DATE, VERSION
