@@ -8,8 +8,8 @@ import xbmcaddon
 # Constants
 #
 ADDON = "plugin.video.tweakers"
-SETTINGS = xbmcaddon.Addon(id=ADDON)
+SETTINGS = xbmcaddon.Addon()
 LANGUAGE = SETTINGS.getLocalizedString
-IMAGES_PATH = os.path.join(xbmcaddon.Addon(id=ADDON).getAddonInfo('path'), 'resources', 'images')
+IMAGES_PATH = os.path.join(xbmcaddon.Addon().getAddonInfo('path'), 'resources', 'images')
 DATE = "2017-03-12"
 VERSION = "1.1.8"
