@@ -1,6 +1,7 @@
 v1.1.8 (2017-03-12):
 - fixed url in addon.xml as per request
 - changed 'xbmc' to 'kodi' in some text
+- not using addon-name in xbmcaddon.Addon() anymore (thanks enen92)
 
 v1.1.7 (2016-12-07):
 (kudos to Martijn for these improvement-suggestions)
